--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >- # 这是站点描述
 
 # 构建设置
 markdown: kramdown
-remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: pages-themes/midnight@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
